--- a/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
+++ b/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Extensions\VisualStudioWorkspaceExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Commands\AnalyzeSolutionCommand.cs" />
+    <Compile Include="SharpenExtensionService.cs" />
     <Compile Include="SharpenPackage.cs" />
     <Compile Include="ToolWindows\SharpenResultsToolWindow.cs" />
     <Compile Include="Commands\ShowSharpenResultsToolWindowCommand.cs" />
