test: Adds smoke tests for UseExpressionBodyForFinalizers

--- a/tests/smoke/CSharp70/CSharp70.csproj
+++ b/tests/smoke/CSharp70/CSharp70.csproj
@@ -44,6 +44,10 @@
     <Compile Include="UseExpressionBodyForConstructors\ConstructorsThatAreNotCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForConstructors\ConstructorsThatAreCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForConstructors\EmptyConstructors.cs" />
+    <Compile Include="UseExpressionBodyForFinalizers\FinalizersThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="UseExpressionBodyForFinalizers\FinalizersThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="UseExpressionBodyForFinalizers\FinalizersThatAreNotCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="UseExpressionBodyForFinalizers\EmptyFinalizers.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
