feat: Runs analysis asynchronously

--- a/src/Sharpen.VisualStudioExtension/packages.config
+++ b/src/Sharpen.VisualStudioExtension/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net47" />
   <package id="ManagedEsent" version="1.9.4" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis" version="2.4.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net47" />
