fix: Improves false comment in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Visual Studio 2015 cache/options directory
+# Visual Studio cache/options directory
 .vs/
 
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
