--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -173,6 +173,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyInfo.Common.cs">
+      <Link>Properties\AssemblyInfo.Common.cs</Link>
+    </Compile>
     <Compile Include="SingleSyntaxTreeAnalysisContext.cs" />
     <Compile Include="AnalysisResult.cs" />
     <Compile Include="CSharpFeatures\ExpressionBodiedMembers.cs" />
