chore: References Microsoft.VisualStudio.ComponentModelHost package

--- a/src/Sharpen.VisualStudioExtension/packages.config
+++ b/src/Sharpen.VisualStudioExtension/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.CodeAnalysis.VisualBasic" version="2.4.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.VisualBasic.Workspaces" version="2.4.0" targetFramework="net47" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="2.4.0" targetFramework="net47" />
+  <package id="Microsoft.VisualStudio.ComponentModelHost" version="15.4.27004" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.LanguageServices" version="2.4.0" targetFramework="net47" />
