feat: Adds UseDefaultExpressionInOptionalMethod/ConstructorParameters

--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -157,6 +157,9 @@
       <Link>Properties\AssemblyInfo.Common.cs</Link>
     </Compile>
     <Compile Include="CSharpFeatures\DefaultExpressions.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\BaseUseDefaultExpressionInOptionalParameters.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInOptionalConstructorParameters.cs" />
+    <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInOptionalMethodParameters.cs" />
     <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInReturnStatements.cs" />
     <Compile Include="SingleSyntaxTreeAnalysisContext.cs" />
     <Compile Include="AnalysisResult.cs" />
