feat: Adds UseOutVariablesInMethodInvocations
First very useful implementation that covers most of the cases.
Some edge cases are still not covered (see the "failing" smoke tests).

--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -157,6 +157,9 @@
       <Link>Properties\AssemblyInfo.Common.cs</Link>
     </Compile>
     <Compile Include="CSharpFeatures\DefaultExpressions.cs" />
+    <Compile Include="CSharpFeatures\OutVariables.cs" />
+    <Compile Include="Extensions\SyntaxNodeExtensions.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\UseOutVariablesInMethodInvocations.cs" />
     <Compile Include="SharpenSuggestions\CSharp71\BaseUseDefaultExpressionInOptionalParameters.cs" />
     <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInOptionalConstructorParameters.cs" />
     <Compile Include="SharpenSuggestions\CSharp71\UseDefaultExpressionInOptionalMethodParameters.cs" />
