--- a/tests/smoke/CSharp70/CSharp70.csproj
+++ b/tests/smoke/CSharp70/CSharp70.csproj
@@ -64,6 +64,9 @@
     <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessorsInProperties\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessorsInProperties\EmptyGetAccessors.cs" />
+    <Compile Include="UseOutVariablesInMethodInvocations\MethodInvocationsThatAreNotCandidatesToHaveOutVariables.cs" />
+    <Compile Include="UseOutVariablesInMethodInvocations\MethodInvocationsThatAreCandidatesToHaveOutVariables.cs" />
+    <Compile Include="UseOutVariablesInMethodInvocations\OutClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
