feat: Groups the analysis results by C# language feature

--- a/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
+++ b/src/Sharpen.VisualStudioExtension/Sharpen.VisualStudioExtension.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ToolWindows\AnalysisResultTreeViewBuilders\CSharpVersionSuggestionFilePathTreeViewBuilder.cs" />
     <Compile Include="ToolWindows\AnalysisResultTreeViewItems\SingleSuggestionTreeViewItem.cs" />
     <Compile Include="ToolWindows\AnalysisResultTreeViewItems\FilePathTreeViewItem.cs" />
+    <Compile Include="ToolWindows\AnalysisResultTreeViewItems\CSharpFeatureTreeViewItem.cs" />
     <Compile Include="ToolWindows\AnalysisResultTreeViewItems\SuggestionTreeViewItem.cs" />
     <Compile Include="ToolWindows\AnalysisResultTreeViewItems\CSharpVersionTreeViewItem.cs" />
     <Compile Include="ToolWindows\ISharpenResultsCommandHandler.cs" />
