feat: Adds DiscardOutVariablesInObjectCreations

--- a/tests/smoke/CSharp70/CSharp70.csproj
+++ b/tests/smoke/CSharp70/CSharp70.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DiscardOutVariablesInObjectCreations\ObjectCreationsThatAreCandidatesToDiscardOutVariables.cs" />
     <Compile Include="UseExpressionBodyForLocalFunctions\LocalFunctionsThatAlreadyHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForLocalFunctions\LocalFunctionsThatAreCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForLocalFunctions\LocalFunctionsThatAreNotCandidatesToHaveExpressionBody.cs" />
